<resources>
    <string name="app_name">MQTT connection test</string>
    <string name="status">Status</string>
    <string name="alarm">Alarm</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="smoke">Smoke</string>
    <string name="waterline">Waterline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
